--- a/src/index.css
+++ b/src/index.css
@@ -9,13 +9,16 @@ body {
   text-align: center;
   background-color: #1A0E27;
   color: aliceblue;
-
+  height: fit-content;  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+
 
 
 .navbar, .navbar-brand {
@@ -26,6 +29,33 @@ code {
   
 }
 
+.card {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.card-description {
+  background-color: white;
+}
+
+.hover-over-image {
+  display: none;
+  
+}
+
+.card:hover .image img {
+  opacity: 0.5;
+  transition: all 0.5s ease;
+  
+}
+.card-image:hover .hover-over-image {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: all 1.5s ease;
+  
+}
 
 div.navbar-brand {
   padding-top: 2em;
@@ -47,6 +77,10 @@ main {
   color: white;
 }
 
+.resumeBody {
+  height: 50vh;
+}
+
 .myPortrait {
 	clip-path:fill-box;
   width: 250px;
@@ -59,6 +93,8 @@ main {
 .headerName {
   color: white;
 }
+
+
 
 footer.footer {
   background-color: #1A0E27;
